Range Q7 - Fixed spacing between label and sub label

--- a/app/scss/brands/maytag/_answers.scss
+++ b/app/scss/brands/maytag/_answers.scss
@@ -157,10 +157,16 @@ div.img-wrap.selected {
 	&.radio-4-subtext {
 		.label-wrap {
 			padding-left: 25px;
+            width: 1px;
 			
+            .label-text {
+                width: 7px;
+                max-width: 7px;
+            }
+            
 			.label-subtext {
 				text-align: left;
-				padding-left: 20px;
+				padding-left: 14px;
 			}
 		}
 	}
