--- a/app/scss/structure/_app-main.scss
+++ b/app/scss/structure/_app-main.scss
@@ -1321,9 +1321,6 @@ a.boxes-icon-split:hover, a.boxes-icon-2:hover, a.picture-3:hover {
             top: 6px;   
         }
         .label-wrap {
-            .one-line {
-                width: 60px;
-            }
             .label-text {
                 font-size: 9px !important;   
             }
